--- a/layouts/partials/shortcodes_partials/box_text_wrapper_base.html
+++ b/layouts/partials/shortcodes_partials/box_text_wrapper_base.html
@@ -1,11 +1,12 @@
 {{- $CLASS := .class -}}
 {{- $ICON := .icon_arg | default .default_icon -}}
 {{- if eq .icon_arg false -}}
-{{- $ICON = "" -}}
+	{{- $ICON = "" -}}
 {{- end -}}
+{{- $css_style := .style | default "" -}}
 {{- $text := .Inner -}} 
 {{- $inner_lines := len (split (.Inner | markdownify) "\n") -}} 
-<section class='{{- $CLASS -}}' data-text="{{- $ICON -}}">
+<section class='{{- $CLASS -}}' data-text="{{- $ICON -}}" style="{{- $css_style | safeCSS -}}">
 {{- if eq $inner_lines 1 -}} 
 	<p>{{- $text | markdownify -}}</p>
 {{- else -}} 
