--- a/layouts/shortcodes/box_color.html
+++ b/layouts/shortcodes/box_color.html
@@ -1,18 +1,18 @@
 {{/*  
-Renders a text with a custom color box. ✅
+Renders a text with a custom color box. 
 
 Arguments:
 color_dark = color used in dark mode
 color_light = color used in light mode
 color = color used both in dark and light mode
-icon = custom icon. Default: " " (none)
+icon = custom icon. Default: "" (none)
 
 false/string = do not show the icon (or pass a string with a custom emoji)
 
 Example of use:
-{{< box_color color_dark="red" color_light="orange" icon="" >}}
+{{< box_color color_dark="red" color_light="orange" icon="🍀" >}}
 Inside the tags I can write normal markdown code.
-{{< /box_green >}}
+{{< /box_color >}}
 */}}
 
 {{ $CLASS := "custom-box" }}
