--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -28,6 +28,21 @@ span{
 }
 // {{/*  REFACTOR rotate  */}}
 
+.img-link{
+	transition-duration: 1s;
+	& img{
+		transition-duration: 1s;
+		border: 2px solid transparent;
+	}
+	&:hover {
+		transition-duration: .2s;
+		color: var(--hover-color);
+		img{
+			transition-duration: .2s;
+			border: 2px solid var(--hover-color);
+		}
+	}
+}
 
 // RAINBOW
 
