--- a/layouts/shortcodes/img_caption.html
+++ b/layouts/shortcodes/img_caption.html
@@ -1,11 +1,13 @@
 {{- /*  
-Shows an image with a caption below
+Shows an image with a caption below. Can link a web if 'url' set
 
 Arguments:
 img = (string) img path.
 caption = (string) Caption text. Default: ""
 italic = (bool) If true, caption will be in italics. Default: true
 alt = (string) Alternative text when not showing the image (Adding it improves SEO).
+url = (string) Add an url to open when clicking the image. Default: ""
+page = (string) Page to open when clicking the image. Default: ""
 
 Usage:
 {{< image_caption img="dexter.png" caption="My best friend" italic=false alt="Picture of a cute dog" >}}
@@ -15,6 +17,17 @@ Usage:
 {{- $caption := or (.Get "caption") (.Get 1) | default "" -}}
 {{- $italic := or (.Get "italic") (.Get 2) | default true -}}
 {{- $alt_text := or (.Get "alt") (.Get 3) | default "" -}}
+{{- $url := or (.Get "url") (.Get 4) | default "" -}}
+{{- $page_name := or (.Get "page") (.Get 5) | default "" -}}
+
+{{- $a_link := $url }}
+{{- if $page_name -}}
+	{{- $page := $.Site.GetPage $page_name -}}
+	{{- if not $page -}}
+		{{- errorf "img_caption: Page '%s' not found (in '%s')" $page_name .Page.File.Path -}}
+	{{- end -}}
+	{{- $a_link = $page.RelPermalink }}
+{{- end -}}
 
 {{- if not $alt_text -}}
 {{- $alt_text = "Image" -}}
@@ -28,11 +41,13 @@ Usage:
 	{{- $tag = "em" | safeHTMLAttr -}}
 {{- end -}}
 <figure>
-    <img src="{{- $img_url -}}" loading="lazy" width="{{$image_resource.Width}}" height="{{$image_resource.Height}}" alt="{{$alt_text}}">
-    {{- /*  <img src="{{- $img_url -}}" loading="lazy" {{- partial "utils/img-attributes-from-resource.html" (dict "page" .Page "img_path" $img_path) }} alt="{{$alt_text}}">  */ -}}
-    {{- /*  <{{ $tag }} style="opacity: .6;">{{- $caption -}}</{{ $tag }}>  */ -}}
+	{{- if $a_link -}}<a class="img-link" target="_blank" rel="noopener noreferrer" href="{{$a_link}}">{{- end -}}
+	<img src="{{- $img_url -}}" loading="lazy" width="{{$image_resource.Width}}" height="{{$image_resource.Height}}" alt="{{$alt_text}}">
+	{{- /*  <img src="{{- $img_url -}}" loading="lazy" {{- partial "utils/img-attributes-from-resource.html" (dict "page" .Page "img_path" $img_path) }} alt="{{$alt_text}}">  */ -}}
+	{{- /*  <{{ $tag }} style="opacity: .6;">{{- $caption -}}</{{ $tag }}>  */ -}}
 	{{- if $caption -}}
 		{{- $html := printf "<%s style='opacity:.6;'>%s</%s>" $tag $caption $tag -}}
 		{{- $html | safeHTML -}}
 	{{- end -}}
+	{{- if $a_link -}}</a>{{- end -}}
 </figure>
