--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -755,7 +755,7 @@ blockquote {
 		border-left: 3px solid var(--hover-color);
 		padding: 15px 20px;
 		box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-		
+		color: var(--text-2);
 		& strong {
 			transition: all 1s;
 		}
