--- a/layouts/shortcodes/get_social_url.html
+++ b/layouts/shortcodes/get_social_url.html
@@ -1,15 +1,19 @@
 {{- /*  
 Returns only the url for the profile of a site
 
+0 = (string) social site key/name
+1 = (bool (true/false)) If true, creates a link. Default: false
+
 Use:
-{{< get_social_url [social_sites KEY]>}}
+{{< get_social_url [social_sites KEY] [link=true/false] >}}
 Example:
-{{< get_social_url instagram>}}
-{{< get_social_url INSTAGRAM>}} -> Is not case sensitive
-{{< get_social_url twitter>}}
+{{< get_social_url instagram >}}
+{{< get_social_url INSTAGRAM >}} -> Is not case sensitive
+{{< get_social_url twitter >}}
   */ -}}
 
 {{- $social_platform := .Get 0 | lower -}}
+{{- $create_link := .Get 1 | default false -}}
 
 {{- $socials := .Site.Data.social_sites -}}
 {{- $data := index $socials $social_platform -}}
@@ -18,4 +22,8 @@ Example:
   {{- errorf "Social platform '%s' not found in social_sites.json [at 'get_social_url %s' shortcode]" (.Get 0) (.Get 0) -}}
 {{- end -}}
 
-{{- $data.url -}}
+{{- if $create_link -}}
+  <a href="{{- $data.url -}}">{{- $data.url -}}</a>
+{{- else -}}
+  {{- $data.url -}}
+{{- end -}}
