--- a/layouts/shortcodes/text_glitch.html
+++ b/layouts/shortcodes/text_glitch.html
@@ -140,4 +140,7 @@ randomness = (float) Displacement randomness. Default: 0.0
 {{- end -}}
 
 {{- /*  To avoid whitespaces in HTML  */ -}}
-{{- $output | safeHTML -}}
+<span>
+	{{- $output | safeHTML -}}
+</span>
+
