--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1918,15 +1918,21 @@ h3.uppercase{
 }
 .articles-index ol li::before{
 	content: '';
+transition-duration: .3s;
 	padding-left: 5px;
+// padding-left: 7px;
 	// border-left: 10px double #ff6550;
-	border-left: 5px solid var(--hover-color-soft);
+	// border-left: 5px solid var(--hover-color-soft);
+border-left: 3px solid var(--hover-color);
+	opacity: .5;
 }
 .articles-index ol li:hover::before{
 	content: '';
+transition-duration: .03s;
 	padding-left: 5px;
 	// border-left: 10px double #ff6550;
 	border-left: 5px solid var(--hover-color);
+opacity: 1;
 }
 .articles-index ol li{
 	list-style-type: none;
