--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1978,7 +1978,8 @@ hgroup.articles-content > ol{
 //     margin-left: 10px;
 // }
 
-hgroup.articles-content p a:not([class]){
+// hgroup.articles-content p a:not([class]){
+hgroup.articles-content p a:not([class]), hgroup.articles-content ul a, hgroup.articles-content ol a{
 	color: var(--hover-color);
 	&:hover{
 		text-decoration: underline !important;
