--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -29,8 +29,11 @@ $soft_color: change-color($main_color, $saturation: 60%, $lightness: 40%);
 	// --pfp-color-0-dark: #ff00d4;
 	// --pfp-color-2-dark: #00ff22;
 	
+	// DEPRECATED do not use it
 	// --hover-color-soft: #a0612a;
-	--hover-color-soft: #{$soft_color};
+	// --hover-color-soft: #{$soft_color};
+	--hover-color-soft: color-mix(in lab, var(--hover-color) 50%, rgb(0, 0, 0) 20%);
+
 	--profile-scale: 1.1;
 	--articles-side-margin: 20px;
 
@@ -1772,7 +1775,7 @@ nav.categories ul li a{
 	#articles-author{
 		display: inline-block;
 		font-style: italic;
-color: inherit;
+		color: inherit;
 		
 		&:hover{
 			color: var(--hover-color);
@@ -1918,21 +1921,21 @@ h3.uppercase{
 }
 .articles-index ol li::before{
 	content: '';
-transition-duration: .3s;
+	transition-duration: .3s;
 	padding-left: 5px;
-// padding-left: 7px;
+	// padding-left: 7px;
 	// border-left: 10px double #ff6550;
 	// border-left: 5px solid var(--hover-color-soft);
-border-left: 3px solid var(--hover-color);
+	border-left: 3px solid var(--hover-color);
 	opacity: .5;
 }
 .articles-index ol li:hover::before{
 	content: '';
-transition-duration: .03s;
+	transition-duration: .03s;
 	padding-left: 5px;
 	// border-left: 10px double #ff6550;
 	border-left: 5px solid var(--hover-color);
-opacity: 1;
+	opacity: 1;
 }
 .articles-index ol li{
 	list-style-type: none;
