--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,12 @@
 <html class="{{- if (eq $theme "light") -}}light{{- else if (eq $theme "dark") }}dark{{ end }}" lang="{{- site.LanguageCode | default "en" -}}">
   {{ partial "head.html" . }}
   {{- /*  <body class="preload-no-transitions">  */ -}}
-  <body>
+  {{- $accent_color := .Params.accent_color | default "" -}}
+  {{- $style := "" -}}
+  {{- if $accent_color -}}
+    {{- $style = printf "style='--hover-color:%s;'" $accent_color -}}
+  {{- end -}}
+  <body {{$style | safeHTMLAttr -}}>
     {{ block "header" . }}{{ partial "header.html" . }}{{ end }}
     <main>
       {{ if .Site.Params.is_debug}}
