--- a/layouts/shortcodes/details.html
+++ b/layouts/shortcodes/details.html
@@ -6,6 +6,7 @@ Renders an HTML details element.
 @param {string} [summary] The content of the child summary element.
 @param {string} [title] The value of the element's title attribute.
 @param {bool} [open=false] Whether to initially display the content of the details element.
+@param {string} [open] The color for the box (default is: $DEFAULT_COLOR). TIP: Set to false to use the accent color
 
 @reference https://developer.mozilla.org/en-US/docs/Web/HTML/Element/details
 
@@ -51,12 +52,19 @@ Renders an HTML details element.
 
 */}}
 
+{{- $DEFAULT_COLOR := "rgba(92, 92, 92, 0.42)" -}}
+
 {{- /* Get arguments. */}}
 {{- $name := or (.Get "name") "" }}
 {{- $class := or (.Get "class") "" }}
 {{- $summary := or (.Get "summary") (.Get 0) "Details" }}
 {{- $title := or (.Get "title") "" }}
-{{- $is_opened := (.Get "open") }}
+{{- $is_opened := or (.Get "open") (.Get 1) }}
+{{- $color := or (.Get "color") (.Get 2) | default $DEFAULT_COLOR }}
+
+{{- if eq $color false -}}
+{{- $color = "" -}}
+{{- end -}}
 
 {{- $open := false }}
 {{- if in (slice "false" false 0) $is_opened }}
@@ -71,8 +79,12 @@ Renders an HTML details element.
   {{- with $name }} name="{{ . }}" {{- end }}
   {{- with $open }} open {{- end }}
   {{- with $title }} title="{{ . }}" {{- end -}}
+  {{- with $color }} style="{{ (printf "--summary-title-color:%s;" . ) | safeCSS }}" {{- end }}
 >
   <summary>{{ $summary | .Page.RenderString }}</summary>
   {{- /*  <h1>{{ $summary | .Page.RenderString }}</h1>  */ -}}
-  {{ .Inner | .Page.RenderString (dict "display" "block") -}}
+  <article>
+    {{ .Inner | .Page.RenderString (dict "display" "block") -}}
+  </article>
+
 </details>
