tags cloud, thicker font-weight

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1860,6 +1860,8 @@ hr.main {
 
 .articles-right-bar .article-tags{
 	text-align: center;
+	font-weight: 600;
+	// font-weight: bold;
 }
 
 .articles-right-bar p{
