profile bar in articles is now sticky!

--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -4,6 +4,11 @@
 	box-shadow: #{$x} #{$y} #{$blur} #{$spread} #{$color} !important;
 }
 
+.sticky{
+	position: sticky !important;
+	top: var(--sticky-top-position, 0px) !important;
+}
+
 .accent-color{
 	color: var(--hover-color);
 }
