--- a/layouts/partials/articles-right-bar.html
+++ b/layouts/partials/articles-right-bar.html
@@ -1,4 +1,4 @@
-<aside class="articles-right-bar" >
+<aside class="articles-right-bar sticky" >
 	{{/*  <hgroup>  */}}
 
 {{/*  REFACTOR eliminar comentarios  */}}
