--- a/layouts/shortcodes/featured_albums.html
+++ b/layouts/shortcodes/featured_albums.html
@@ -11,7 +11,7 @@ Arguments:
 Use example:
 {{< featured_albums "my-first-album, another-album" >}}
 {{< featured_albums "my-first-album, another-album" "My favourite albums" 3 "left" >}}
-{{< featured_albums title="my-first-album, another-album" title="My favourite albums" align="right" >}}
+{{< featured_albums albums="my-first-album, another-album" title="My favourite albums" align="right" >}}
 */ -}}
 
 
