articles-index sticky top 0px (equal to profile bar)

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1731,7 +1731,8 @@ nav.categories ul li a{
 	height: 100vh; /* Full height */
 	// position: fixed; /* Stays in place while scrolling */
 	position: sticky;
-	top: 15px;
+	// top: 15px;
+	top: 0px;
 	// top: 190px;
 	// left: 0; // this makes the index sticky to the X axis!
 	// background: #4e4e4e;
