--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1910,10 +1910,17 @@ h3.uppercase{
 // 	margin-bottom: 10px;
 // }
 
-.articles-index a:hover{
+.articles-index {
+	a{
+		// transition-duration: .6s;
+		transition-duration: .7s;
+	}
+	a:hover{
 	// color: pink;
+	transition-duration: .1s;
 	color: var(--hover-color);
 	// border-left: 10px double #ff6550;
+	}
 }
 
 .articles-index ol{
@@ -1936,6 +1943,7 @@ h3.uppercase{
 	content: '';
 	transition-duration: .03s;
 	padding-left: 5px;
+	// padding-left: 10px;
 	// border-left: 10px double #ff6550;
 	border-left: 5px solid var(--hover-color);
 	opacity: 1;
