--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -483,54 +483,52 @@ article.articles-content{
 		// border-right: 2px solid #ddd;
 	// overflow-y: auto; /* Scroll if content overflows */
 	// display: none;
-}
 
+	hr{
+		// position: absolute;
+		width: auto;
+		left: 2.5%; /* Adjusted from left: 0 to center */
+		right: 2.5%; /* Adjusted from right: 0 to center */
+		
+		// border-bottom: 1px solid rgba(0,0,0,.08);
+		// margin: 2.5em 0;
+		margin: 13px 0px;
+		// background: linear-gradient(90deg, transparent 0%, var(--separator-color) 20%, var(--separator-color) 50%, var(--separator-color) 80%, transparent 100%);
+		// background: var(--separator-color);
+		background: var(--separator-color-soft);
+		// background: pink;
+		// --gradient-color: var(--separator-color);
+		// background: linear-gradient(90deg, transparent 0%, var(--gradient-color) 20%, var(--gradient-color) 50%, var(--gradient-color) 80%, transparent 100%);
+		height: 1px;
+		border: 0;
+	}
 
+	.article-tags{
+		text-align: center;
+		font-weight: 600;
+		// font-weight: bold;
+	}
 
-.articles-right-bar hr{
-	// position: absolute;
-	width: auto;
-	left: 2.5%; /* Adjusted from left: 0 to center */
-	right: 2.5%; /* Adjusted from right: 0 to center */
-	
-	// border-bottom: 1px solid rgba(0,0,0,.08);
-	// margin: 2.5em 0;
-	margin: 13px 0px;
-	// background: linear-gradient(90deg, transparent 0%, var(--separator-color) 20%, var(--separator-color) 50%, var(--separator-color) 80%, transparent 100%);
-	// background: var(--separator-color);
-	background: var(--separator-color-soft);
-	// background: pink;
-	// --gradient-color: var(--separator-color);
-	// background: linear-gradient(90deg, transparent 0%, var(--gradient-color) 20%, var(--gradient-color) 50%, var(--gradient-color) 80%, transparent 100%);
-	height: 1px;
-	border: 0;
-}
+	p{
+		text-decoration: dotted;
+		font-style: italic;
+		text-align: center;
+	}
 
-.articles-right-bar .article-tags{
-	text-align: center;
-	font-weight: 600;
-	// font-weight: bold;
-}
+	.social-icons{
+		// display: flex;
+		// padding: 10px 10px;
+		// padding: 0px 0px;
+		// color:pink;
+		// gap: 3px;
+		gap: .3rem;
+		padding-left: .1rem;
+		padding-right: .1rem;
+	}
 
-.articles-right-bar p{
-	text-decoration: dotted;
-	font-style: italic;
-	text-align: center;
-}
-
-.articles-right-bar .social-icons{
-	// display: flex;
-	// padding: 10px 10px;
-	// padding: 0px 0px;
-	// color:pink;
-	// gap: 3px;
-	gap: .3rem;
-	padding-left: .1rem;
-	padding-right: .1rem;
-}
-
-.articles-right-bar img{
-	border-radius: 9px;
+	img{
+		border-radius: 9px;
+	}
 }
 
 
@@ -550,39 +548,45 @@ article.articles-content{
 	color: var(--hover-color);
 	// border-left: 10px double #ff6550;
 	}
+
+	ol{
+		list-style-type: disc;
+		list-style-position: inside;
+		// padding-inline-start: 2%;
+		padding-inline-start: 15px;
+
+		li::before{
+			content: '';
+			transition-duration: .3s;
+			padding-left: 5px;
+			// padding-left: 7px;
+			// border-left: 10px double #ff6550;
+			// border-left: 5px solid var(--hover-color-soft);
+			border-left: 3px solid var(--hover-color);
+			opacity: .5;
+		}
+
+		li:hover::before{
+			content: '';
+			transition-duration: .03s;
+			padding-left: 5px;
+			// padding-left: 10px;
+			// border-left: 10px double #ff6550;
+			border-left: 5px solid var(--hover-color);
+			opacity: 1;
+		}
+
+		li{
+			list-style-type: none;
+			// tab-size: 4;
+			// margin: 0px;
+			// list-style-position: inside;
+			// border-left: #fe9234;
+			// border: 1px 2;
+			// border-left: 10px double #ff6550;
+		}
+	}
 }
 
-.articles-index ol{
-	list-style-type: disc;
-	list-style-position: inside;
-	// padding-inline-start: 2%;
-	padding-inline-start: 15px;
-}
-.articles-index ol li::before{
-	content: '';
-	transition-duration: .3s;
-	padding-left: 5px;
-	// padding-left: 7px;
-	// border-left: 10px double #ff6550;
-	// border-left: 5px solid var(--hover-color-soft);
-	border-left: 3px solid var(--hover-color);
-	opacity: .5;
-}
-.articles-index ol li:hover::before{
-	content: '';
-	transition-duration: .03s;
-	padding-left: 5px;
-	// padding-left: 10px;
-	// border-left: 10px double #ff6550;
-	border-left: 5px solid var(--hover-color);
-	opacity: 1;
-}
-.articles-index ol li{
-	list-style-type: none;
-	// tab-size: 4;
-	// margin: 0px;
-	// list-style-position: inside;
-	// border-left: #fe9234;
-	// border: 1px 2;
-	// border-left: 10px double #ff6550;
-}
+
+
