handwritten font sizes

--- a/assets/css/shortcodes/handwritten.scss
+++ b/assets/css/shortcodes/handwritten.scss
@@ -15,6 +15,7 @@ $default_scale: 1.0;
 	// animation-timing-function: steps(2, jump-end);
 	// animation-timing-function: steps(5, jump-start);
 	// animation-timing-function: steps(2, jump-both);
+	font-size: 1.2em;
 	
 }
 
