--- a/assets/css/fonts.scss
+++ b/assets/css/fonts.scss
@@ -70,8 +70,17 @@ font-style: normal;
 	font-family: "Schoolbell", cursive;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 1.2em;
+	// font-size: 1.2em;
 }
+
+.handwritten-font .articles-content, 
+.handwritten-font hgroup.galery-title, 
+.handwritten-font aside.articles-right-bar {
+	p, li{
+		font-size: 1.17rem !important;
+	}
+}
+
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 .sans-font{
