--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -9,6 +9,7 @@
 @import "shortcodes/audio.scss";
 @import "shortcodes/images_hover_link.scss";
 @import "shortcodes/details.scss";
+@import "shortcodes/link_cards.scss";
 // @import "shortcodes/misc_effects.scss";
 
 .link-box-color{
