--- a/layouts/partials/related.html
+++ b/layouts/partials/related.html
@@ -21,7 +21,8 @@
 
 {{ with $related }}
   <hr class="full-separator">
-  <hgroup style="margin-top: 8rem">
+  {{- /*  <hgroup style="margin-top: 8rem">  */ -}}
+  <hgroup style="margin-top: 1rem">
     <h2>{{ T "relatedAlbums" }}</h2>
   </hgroup>
   <section class="galleries">
