text_wavy surrounded with span

--- a/layouts/shortcodes/text_wavy.html
+++ b/layouts/shortcodes/text_wavy.html
@@ -55,4 +55,6 @@ Usage:
 {{- end -}}
 
 {{- /*  To avoid whitespaces in HTML  */ -}}
-{{- $output | safeHTML -}}
+<span>
+	{{- $output | safeHTML -}}
+</span>
