fix pixelated image-rendering

--- a/assets/css/fonts.scss
+++ b/assets/css/fonts.scss
@@ -28,7 +28,7 @@
 	// font-weight: 600;
 	// font-style: normal;
 	// font-size: .6em;
-	image-rendering: pixelated;
+	// image-rendering: pixelated;
 	// image-rendering: crisp-edges;
 	font-smooth: never;
 	-webkit-font-smoothing : none;
