--- a/layouts/partials/utils/get-related-pages-in-section.html
+++ b/layouts/partials/utils/get-related-pages-in-section.html
@@ -16,13 +16,24 @@ Arguments: "." = Page from which it will get the .Section
 		{{- $_page := $.Site.GetPage . -}}
 		{{- /*  {{- $related = slice $_page | append $related . -}}  */ -}}
 		{{- $related = slice $_page | append $related -}}
-		{{ warnf "%#v" $related_pages_array }}
 	{{- end -}}
 {{- end -}}
 
 {{/*  NOTE after calling this, one may want to filter the first X related pages, like:
 {{ $related = first 3 $related }}
 */}}
-{{ return $related }}
+{{- /*  {{ return $related }}  */ -}}
+
+{{- /*  Avoids returning the current page in related  */ -}}
+{{- $current_page := . -}}
+{{- $related_without_current_page := slice -}}
+{{- range $related -}}
+	{{- if ne . $current_page -}}
+		{{- $related_without_current_page = $related_without_current_page | append . -}}
+	{{- end -}}
+{{- end -}}
+
+{{- /*  uniq for avoiding returning duplicated pages  */ -}}
+{{ return ($related_without_current_page | uniq) }}
 
 
