table of content shortcode

--- a/assets/css/shortcodes/details.scss
+++ b/assets/css/shortcodes/details.scss
@@ -107,6 +107,11 @@ details {
 
 	article{
 		padding: 10px;
+		padding-left: 20px;
+
+		nav.TableOfContents{
+			font-weight: bold;
+		}
 	}
 
 	&::before{
